数据库添加

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./src/app/main.js",
   "scripts": {
     "start": "electron .",
-    "dev": "electron . --debug",
+    "dev": "electron . --inspect=5858",
     "pack": "electron-builder --win --x64",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -86,14 +86,16 @@
   "homepage": "https://github.com/zkh110119/music_player#readme",
   "devDependencies": {
     "devtron": "^1.4.0",
-    "electron": "^9.0.0",
+    "electron": "^9.1.0",
     "electron-builder": "^22.7.0",
-    "electron-devtools-installer": "^3.1.0"
+    "electron-devtools-installer": "^3.1.0",
+    "node-gyp": "^7.0.0"
   },
   "dependencies": {
     "bootstrap": "^3.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "popper.js": "^1.16.1",
+    "sqlite3": "^5.0.0"
   }
 }
